PROJECT(PSTNSERV)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


SET(CMAKE_SYSTEM_NAME Linux)
SET(CMAKE_FIND_ROOT_PATH "/usr/local/arm/4.4.1/")
SET(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
SET(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)

SET(CMAKE_C_COMPILER   /usr/local/arm/4.4.1/bin/arm-linux-gcc )
SET(CMAKE_CXX_COMPILER   /usr/local/arm/4.4.1/bin/arm-linux-g++ )

set(CMAKE_INSTALL_PREFIX  /phone-reduce/phone)

#SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
ADD_DEPENDENCIES(pstn_serv_arm pstnserv)
