#FIND_PACKAGE(MEDIASTREAMER REQUIRED)
#FIND_PACKAGE(PSTNSERV REQUIRED)
#MESSAGE(STATUS "AFTER PSTNSERV_FOUND")
#IF(PSTNSERV_FOUND)
#	MESSAGE(STATUS "PSTNSERV_LIBRARY FOUND")

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/build/lib)
LINK_DIRECTORIES(/phone/lib)
	ADD_EXECUTABLE(pstn_serv_arm PSTNserver.cpp)
	#	INCLUDE_DIRECTORIES(${PSTN_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(/phone/include /usr/local/arm/4.4.1/include)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
	
	
	TARGET_LINK_LIBRARIES(pstn_serv_arm pstnserv)

ADD_EXECUTABLE(reset_arm reset.cpp)
ADD_EXECUTABLE(mixer_ctrl_arm mixer.cpp)
ADD_EXECUTABLE(mic_control_arm mic_control.c)
	INSTALL(TARGETS pstn_serv_arm reset_arm mixer_ctrl_arm mic_control_arm
		RUNTIME DESTINATION bin)
#ENDIF(PSTNSERV_FOUND)
